--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -16,12 +16,12 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       
       - name: Setup Helm
-        uses: Azure/setup-helm@v1
+        uses: Azure/setup-helm@v3
         with:
-          version: 'v3.5.4'
+          version: 'v3.8.2'
 
       - name: Deploy to staging
         if: github.ref == 'refs/heads/staging' && github.event.workflow_run.head_branch == 'staging' && !contains(github.event.workflow_run.head_commit.message, '[RELEASE]') && !contains(github.event.workflow_run.head_commit.message, '[HOTFIX]')
@@ -33,4 +33,4 @@ jobs:
         if: github.ref == 'refs/heads/main' && github.event.workflow_run.head_branch == 'main' && (contains(github.event.workflow_run.head_commit.message, '[RELEASE]') || contains(github.event.workflow_run.head_commit.message, '[HOTFIX]'))
         run: |
           helm version
-          helm upgrade --install my-app-prod ./helm-chart -f ./helm-chart/values.prod.yaml
+          #helm upgrade --install my-app-prod ./helm-chart -f ./helm-chart/values.prod.yaml
