--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,9 +10,8 @@ on:
       - main
 
 jobs:
-  build:
+  install:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -25,5 +24,27 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Cache node modules
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: |
+            node_modules
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+
+  lint:
+    needs: [setup]
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Run lint
+        run: npm lint
+
+  test:
+    needs: [setup]
+    runs-on: ubuntu-latest
+
+    steps:
       - name: Run tests
         run: npm test
