--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,30 +21,47 @@ jobs:
         with:
           node-version: 16
 
-      - name: Install dependencies
-        run: npm ci
-
       - name: Cache node modules
+        id: cache-node-modules
         uses: actions/cache@v3
-        env:
-          cache-name: cache-node-modules
         with:
-          path: |
-            node_modules
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Install dependencies
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
+        run: npm install
 
   lint:
-    needs: [setup]
+    needs: [install]
     runs-on: ubuntu-latest
 
     steps:
+      - name: Restore dependencies cache
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Run lint
         run: npm lint
 
   test:
-    needs: [setup]
+    needs: [install]
     runs-on: ubuntu-latest
 
     steps:
+      - name: Restore dependencies cache
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: Run tests
         run: npm test
