--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -12,17 +12,14 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-    if: github.event.workflow_run.conclusion == 'success'
-
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      
       - name: Setup Helm
         uses: Azure/setup-helm@v3
         with:
           version: 'v3.8.2'
-
       - name: Deploy to staging
         if: github.ref == 'refs/heads/staging' && github.event.workflow_run.head_branch == 'staging' && !contains(github.event.workflow_run.head_commit.message, '[RELEASE]') && !contains(github.event.workflow_run.head_commit.message, '[HOTFIX]')
         run: |
