--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,78 +8,153 @@ on:
   pull_request:
     branches:
       - main
+      - staging
 
 jobs:
-  test-npm:
-    runs-on: ubuntu-latest
-    steps:
-      - name: test
-        run: npm --version
-
   install:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-
       - name: Cache node modules
         id: cache-node-modules
         uses: actions/cache@v3
         with:
           path: node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
+          restore-keys: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
       - name: Install dependencies
         if: steps.cache-node-modules.outputs.cache-hit != 'true'
         run: npm install
 
   lint:
-    needs: [install]
     runs-on: ubuntu-latest
-
+    needs: [install]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: debug
-        run: pwd && ls -al
-
       - name: Restore dependencies cache
         uses: actions/cache@v3
         with:
           path: node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
+          restore-keys: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+      - name: Install dependencies
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
+        run: npm install
       - name: Run lint
         run: npm run lint
 
-  test:
-    needs: [install]
+  unit_test:
     runs-on: ubuntu-latest
-
+    needs: [install]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: debug
-        run: pwd && ls -al
-
       - name: Restore dependencies cache
         uses: actions/cache@v2
         with:
           path: node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-
+          restore-keys: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+      - name: Install dependencies
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
+        run: npm install
       - name: Run tests
         run: npm test
+
+  test:
+    runs-on: ubuntu-latest
+    needs: [install]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Restore dependencies cache
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+      - name: Install dependencies
+        if: steps.cache-node-modules.outputs.cache-hit != 'true'
+        run: npm install
+      - name: Run tests
+        run: |
+              npm run start &
+              endpoints=("/hello" "/ping" "/current-date" "/fibo/1")
+              for endpoint in "${endpoints[@]}"; do
+                echo "[INFO] endpoint=${endpoint}"
+                status_code=$(curl --write-out '%{http_code}' -s --output /dev/null http://localhost:3000/hello)
+                if [[ $status_code != "200" ]]; then
+                  echo "[ERROR] endpoint=${endpoint} status_code=${response}"
+                  exit 1
+                else
+                  echo "[INFO] status_code=${response}"
+                fi
+              done
+
+  e2e:
+    runs-on: ubuntu-latest
+    needs: [install]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Run docker-compose
+        run: |
+          docker-compose up --build -d --quiet-pull --no-color
+          sudo apt update -yqq && sudo apt install net-tools netcat -yqq
+          docker-compose logs
+          docker-compose ps
+          netstat -antlp | grep LISTEN
+          nc -vv -w 3 127.0.0.1 3000 || true
+      - name: Test app
+        run: |
+              endpoints=("/hello" "/ping" "/current-date" "/fibo/1")
+              for endpoint in "${endpoints[@]}"; do
+                echo "[INFO] endpoint=${endpoint}"
+                status_code=$(curl --write-out '%{http_code}' -s --output /dev/null http://localhost:3000/hello)
+                if [[ $status_code != "200" ]]; then
+                  echo "[ERROR] endpoint=${endpoint} status_code=${response}"
+                  exit 1
+                else
+                  echo "[INFO] status_code=${response}"
+                fi
+              done
+
+
+  build:
+    runs-on: ubuntu-latest
+    needs: [lint, unit_test, test, e2e]
+    env:
+      DOCKER_USER: debu99
+      DOCKER_REPO: hello-world
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Create env
+        run: |
+          export IMAGE="${DOCKER_USER}/${DOCKER_REPO}"
+          export GIT_HASH=$(git rev-parse --short "$GITHUB_SHA")
+          echo "IMAGE=$IMAGE" >> $GITHUB_ENV
+          echo "GIT_HASH=$GIT_HASH" >> $GITHUB_ENV
+      - name: Build the image
+        id: build
+        run: |
+          docker build --file Dockerfile -t "${{env.IMAGE}}:${{env.GIT_HASH}}" -t "${{env.IMAGE}}:latest" .
+          docker images | grep ${{env.IMAGE}}
+      - name: Scan the image
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: ${{env.DOCKER_USER}}/${{env.DOCKER_REPO}}:latest
+          format: 'table'
+          exit-code: '1'
+          ignore-unfixed: true
+          vuln-type: 'os,library'
+          severity: 'CRITICAL'
+      - name: Push the image
+        run: |
+          docker images | grep ${{env.IMAGE}}
+          docker login -u ${{env.DOCKER_USER}} -p ${{ secrets.DOCKER_PASSWORD }}
+          echo "[INFO]IMAGE=${{env.IMAGE}} GIT_HASH=${{env.GIT_HASH}} "
+          docker push "${{env.IMAGE}}:${{env.GIT_HASH}}"
+          docker push "${{env.IMAGE}}:latest"
