--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -34,12 +34,13 @@ jobs:
       - name: Deploy to staging
         if: github.ref == 'refs/heads/staging' && !(startsWith(tolower(github.head_ref), 'hotfix/') || contains(tolower(github.event.head_commit.message), '[hotfix]')) && !(startsWith(tolower(github.head_ref), 'release/') || contains(tolower(github.event.head_commit.message), '[release]')) 
         run: |
-          echo "[INFO] Hotfix branch detected"
+          echo "[INFO] not Hotfix/Release branch"
           helm version
           #helm upgrade --install my-app-staging ./helm-chart -f ./helm-chart/values.staging.yaml
 
       - name: Deploy to production
         if: github.ref == 'refs/heads/main'
+        environment: 'prod'
         run: |
           echo "[INFO] main branch detected"
           helm version
