--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -10,12 +10,10 @@ on:
       - completed
 
 jobs:
-  deploy:
+  staging_deploy:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
       - name: Setup Helm
         uses: Azure/setup-helm@v3
         with:
@@ -38,9 +36,22 @@ jobs:
           helm version
           #helm upgrade --install my-app-staging ./helm-chart -f ./helm-chart/values.staging.yaml
 
+      - name: Smoke test
+        env:
+          APP_DOMAIN: "https://app.vic510.click"
+          APP_PORT: "8000"
+          APP_NAMESPACE: "dev"
+          HEALTHCHECK_URL: '/health'
+        run: |
+          echo "staging smoke test"
+
+  staging_deploy:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    environment: 'prod'
+    steps:
       - name: Deploy to production
         if: github.ref == 'refs/heads/main'
-        environment: 'prod'
         run: |
           echo "[INFO] main branch detected"
           helm version
@@ -53,4 +64,4 @@ jobs:
           APP_NAMESPACE: "dev"
           HEALTHCHECK_URL: '/health'
         run: |
-          echo "smoke test"
+          echo "prod smoke test"
