--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -10,15 +10,36 @@ on:
       - completed
 
 jobs:
-  staging_deploy:
+  check:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
-      - name: Setup Helm
-        uses: Azure/setup-helm@v3
-        with:
-          version: 'v3.8.2'
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: check
+        id: check
+        env:
+          DOCKER_USER: debu99
+          DOCKER_REPO: hello-world
+        run: |
+          IMAGE="${DOCKER_USER}/${DOCKER_REPO}"
+          GIT_HASH=$(git rev-parse --short "$GITHUB_SHA")
+          export APP_IMAGE=${IMAGE}:${GIT_HASH}
+          echo "[INFO] APP_IMAGE=${APP_IMAGE}"
+          if docker manifest inspect ${APP_IMAGE}; then
+            echo "image_exist=true" >> $GITHUB_OUTPUT
+          else
+            echo "image_exist=false" >> $GITHUB_OUTPUT
+            exit 1
+          fi
+    outputs:
+      image-exist: ${{ steps.check.outputs.image_exist }}
 
+  test:
+    runs-on: ubuntu-latest
+    needs:
+    - check
+    steps:
       - name: check staging hotfix
         if: github.ref == 'refs/heads/staging' && (startsWith(github.head_ref, 'hotfix/') || contains(github.event.head_commit.message, '[hotfix]'))
         run: |
@@ -29,8 +50,18 @@ jobs:
         run: |
           echo "[INFO] Release branch detected in staging"
 
+  staging_deploy:
+    runs-on: ubuntu-latest
+    needs:
+    - check
+    if: ${{ github.event.workflow_run.conclusion == 'success' && github.ref == 'refs/heads/staging' && !(startsWith(github.head_ref, 'hotfix/') || contains(github.event.head_commit.message, '[hotfix]')) && !(startsWith(github.head_ref, 'release/') || contains(github.event.head_commit.message, '[release]')) }}
+    steps:
+      - name: Setup Helm
+        uses: Azure/setup-helm@v3
+        with:
+          version: 'v3.8.2'
+
       - name: Deploy to staging
-        if: github.ref == 'refs/heads/staging' && !(startsWith(github.head_ref, 'hotfix/') || contains(github.event.head_commit.message, '[hotfix]')) && !(startsWith(github.head_ref, 'release/') || contains(github.event.head_commit.message, '[release]')) 
         run: |
           echo "[INFO] not Hotfix/Release branch"
           helm version
@@ -47,11 +78,17 @@ jobs:
 
   prod_deploy:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    needs:
+    - check
+    if: ${{ github.event.workflow_run.conclusion == 'success' && github.ref == 'refs/heads/main' }}
     environment: 'prod'
     steps:
+      - name: Setup Helm
+        uses: Azure/setup-helm@v3
+        with:
+          version: 'v3.8.2'
+
       - name: Deploy to production
-        if: github.ref == 'refs/heads/main'
         run: |
           echo "[INFO] main branch detected"
           helm version
