--- a/.github/workflows/trunk.yaml
+++ b/.github/workflows/trunk.yaml
@@ -192,6 +192,7 @@ jobs:
         id: check_commit
         run: |
           echo "[INFO] checking commit"
+          curl -L -s -H "Accept: application/vnd.github+json"   -H "Authorization: Bearer ${{ secrets.PGH_TOKEN }}"  -H "X-GitHub-Api-Version: 2022-11-28"   https://api.github.com/repos/debu99/hello-world/commits/$GITHUB_SHA/pulls
           ref=`curl -L -s -H "Accept: application/vnd.github+json"   -H "Authorization: Bearer ${{ secrets.PGH_TOKEN }}"  -H "X-GitHub-Api-Version: 2022-11-28"   https://api.github.com/repos/debu99/hello-world/commits/$GITHUB_SHA/pulls | jq '.[].head.ref'`
           ref=`echo "$ref" | tr '[:upper:]' '[:lower:]'`
           title=`curl -L -s  -H "Accept: application/vnd.github+json"   -H "Authorization: Bearer ${{ secrets.PGH_TOKEN }}"  -H "X-GitHub-Api-Version: 2022-11-28"   https://api.github.com/repos/debu99/hello-world/commits/$GITHUB_SHA/pulls | jq '.[].title'`
