--- a/.github/workflows/trunk.yaml
+++ b/.github/workflows/trunk.yaml
@@ -212,6 +212,7 @@ jobs:
     if: ${{ github.ref == 'refs/heads/main' && needs.check_commit.outputs.from_hotfix == 'false' }}
     needs:
     - build
+    - check_commit
     steps:
       - name: Setup Helm
         uses: Azure/setup-helm@v3
@@ -238,6 +239,7 @@ jobs:
     if: ${{ github.ref == 'refs/heads/main' && needs.check_commit.outputs.from_hotfix == 'true' }}
     needs:
     - build
+    - check_commit
     - staging_deploy
     environment: 'prod'
     steps:
