--- a/.github/workflows/trunk.yaml
+++ b/.github/workflows/trunk.yaml
@@ -181,12 +181,16 @@ jobs:
           ref=`echo "$ref" | tr '[:upper:]' '[:lower:]'`
           title=`curl -L -s  -H "Accept: application/vnd.github+json"   -H "Authorization: Bearer ${{ secrets.PGH_TOKEN }}"  -H "X-GitHub-Api-Version: 2022-11-28"   https://api.github.com/repos/debu99/hello-world/commits/$GITHUB_SHA/pulls | jq '.[].title'`
           title=`echo "$title" | tr '[:upper:]' '[:lower:]'`
-          if [[ -z $ref ]] || [[ $ref == 'null' ]]; then
+          echo "[INFO] ref=$ref title=$title"
+          if [[ -z $ref ]] || [[ $ref == 'null' ]] || [[ -z $title ]] || [[ $title == 'null' ]]; then
             echo "[WARN] The commit doesn't have PR: ref=$ref title=$title"
             echo "from_hotfix=false" >> $GITHUB_OUTPUT
           elif [[ $title == "[hotfix]"* ]] || [[ $title == "[release]"* ]] || [[ $ref == "hotfix/"* ]] || [[ $ref == "release/"* ]]; then
             echo "[INFO] The commit comes from hotfix/release: ref=$ref title=$title"
             echo "from_hotfix=true" >> $GITHUB_OUTPUT
+          else
+            echo "[INFO] The commit's PR is not hotfix: ref=$ref title=$title"
+            echo "from_hotfix=false" >> $GITHUB_OUTPUT
           fi
     outputs:
       from_hotfix: ${{ steps.check_commit.outputs.from_hotfix }}
