--- a/.github/workflows/trunk.yaml
+++ b/.github/workflows/trunk.yaml
@@ -176,7 +176,7 @@ jobs:
         id: check_commit
         run: |
           echo "[INFO] checking commit"
-          curl -L -s -H "Accept: application/vnd.github+json"   -H "Authorization: Bearer ${{ secrets.PGH_TOKEN }}"  -H "X-GitHub-Api-Version: 2022-11-28"   https://api.github.com/repos/debu99/hello-world/commits/$GITHUB_SHA/pulls
+          #curl -L -s -H "Accept: application/vnd.github+json"   -H "Authorization: Bearer ${{ secrets.PGH_TOKEN }}"  -H "X-GitHub-Api-Version: 2022-11-28"   https://api.github.com/repos/debu99/hello-world/commits/$GITHUB_SHA/pulls
           ref=`curl -L -s -H "Accept: application/vnd.github+json"   -H "Authorization: Bearer ${{ secrets.PGH_TOKEN }}"  -H "X-GitHub-Api-Version: 2022-11-28"   https://api.github.com/repos/debu99/hello-world/commits/$GITHUB_SHA/pulls | jq '.[].head.ref'`
           ref=`echo "$ref" | tr '[:upper:]' '[:lower:]'`
           title=`curl -L -s  -H "Accept: application/vnd.github+json"   -H "Authorization: Bearer ${{ secrets.PGH_TOKEN }}"  -H "X-GitHub-Api-Version: 2022-11-28"   https://api.github.com/repos/debu99/hello-world/commits/$GITHUB_SHA/pulls | jq '.[].title'`
@@ -184,16 +184,16 @@ jobs:
           echo "[INFO] ref=$ref title=$title"
           if [[ -z $ref ]] || [[ $ref == 'null' ]] || [[ -z $title ]] || [[ $title == 'null' ]]; then
             echo "[WARN] The commit doesn't have PR: ref=$ref title=$title"
-            echo "from_hotfix=false" >> $GITHUB_OUTPUT
+            echo "skip_staging=false" >> $GITHUB_OUTPUT
           elif [[ $title == "[hotfix]"* ]] || [[ $title == "[release]"* ]] || [[ $ref == "hotfix/"* ]] || [[ $ref == "release/"* ]]; then
             echo "[INFO] The commit comes from hotfix/release: ref=$ref title=$title"
-            echo "from_hotfix=true" >> $GITHUB_OUTPUT
+            echo "skip_staging=true" >> $GITHUB_OUTPUT
           else
             echo "[INFO] The commit's PR is not hotfix: ref=$ref title=$title"
-            echo "from_hotfix=false" >> $GITHUB_OUTPUT
+            echo "skip_staging=false" >> $GITHUB_OUTPUT
           fi
     outputs:
-      from_hotfix: ${{ steps.check_commit.outputs.from_hotfix }}
+      skip_staging: ${{ steps.check_commit.outputs.skip_staging }}
 
   staging_deploy:
     runs-on: ubuntu-latest
@@ -208,14 +208,14 @@ jobs:
           version: 'v3.8.2'
 
       - name: Deploy to staging
-        if: ${{ needs.check_commit.outputs.from_hotfix == 'false' }}
+        if: ${{ needs.check_commit.outputs.skip_staging == 'false' }}
         run: |
           echo "[INFO] not Hotfix/Release branch"
           helm version
           #helm upgrade --install my-app-staging ./helm-chart -f ./helm-chart/values.staging.yaml
 
       - name: Smoke test
-        if: ${{ needs.check_commit.outputs.from_hotfix == 'false' }}
+        if: ${{ needs.check_commit.outputs.skip_staging == 'false' }}
         env:
           APP_DOMAIN: "https://app.vic510.click"
           APP_PORT: "8000"
@@ -226,7 +226,7 @@ jobs:
 
   prod_deploy:
     runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/main' && needs.check_commit.outputs.from_hotfix == 'true' }}
+    if: ${{ github.ref == 'refs/heads/main' }}
     needs:
     - build
     - check_commit
