--- a/.github/workflows/trunk.yaml
+++ b/.github/workflows/trunk.yaml
@@ -179,17 +179,15 @@ jobs:
           #curl -L -s -H "Accept: application/vnd.github+json"   -H "Authorization: Bearer ${{ secrets.PGH_TOKEN }}"  -H "X-GitHub-Api-Version: 2022-11-28"   https://api.github.com/repos/debu99/hello-world/commits/$GITHUB_SHA/pulls
           ref=`curl -L -s -H "Accept: application/vnd.github+json"   -H "Authorization: Bearer ${{ secrets.PGH_TOKEN }}"  -H "X-GitHub-Api-Version: 2022-11-28"   https://api.github.com/repos/debu99/hello-world/commits/$GITHUB_SHA/pulls | jq '.[].head.ref'`
           ref=`echo "$ref" | tr '[:upper:]' '[:lower:]'`
-          title=`curl -L -s  -H "Accept: application/vnd.github+json"   -H "Authorization: Bearer ${{ secrets.PGH_TOKEN }}"  -H "X-GitHub-Api-Version: 2022-11-28"   https://api.github.com/repos/debu99/hello-world/commits/$GITHUB_SHA/pulls | jq '.[].title'`
-          title=`echo "$title" | tr '[:upper:]' '[:lower:]'`
-          echo "[INFO] ref=$ref title=$title"
-          if [[ -z $ref ]] || [[ $ref == 'null' ]] || [[ -z $title ]] || [[ $title == 'null' ]]; then
-            echo "[WARN] The commit doesn't have PR: ref=$ref title=$title"
+          echo "[INFO] ref=$ref"
+          if [[ -z $ref ]] || [[ $ref == 'null' ]]; then
+            echo "[WARN] The commit doesn't have PR: ref=$ref"
             echo "skip_staging=false" >> $GITHUB_OUTPUT
-          elif [[ $title == "[hotfix]"* ]] || [[ $title == "[release]"* ]] || [[ $ref == "hotfix/"* ]] || [[ $ref == "release/"* ]]; then
-            echo "[INFO] The commit comes from hotfix/release: ref=$ref title=$title"
+          elif [[ $ref == "hotfix/"* ]] || [[ $ref == "release/"* ]]; then
+            echo "[INFO] The commit comes from hotfix/release: ref=$ref"
             echo "skip_staging=true" >> $GITHUB_OUTPUT
           else
-            echo "[INFO] The commit's PR is not hotfix: ref=$ref title=$title"
+            echo "[INFO] The commit's PR is not hotfix: ref=$ref"
             echo "skip_staging=false" >> $GITHUB_OUTPUT
           fi
     outputs:
