--- a/.github/workflows/trunk.yaml
+++ b/.github/workflows/trunk.yaml
@@ -174,6 +174,7 @@ jobs:
     steps:
       - name: Check commit
         id: check_commit
+        shell: bash
         run: |
           echo "[INFO] checking commit"
           #curl -L -s -H "Accept: application/vnd.github+json"   -H "Authorization: Bearer ${{ secrets.PGH_TOKEN }}"  -H "X-GitHub-Api-Version: 2022-11-28"   https://api.github.com/repos/debu99/hello-world/commits/$GITHUB_SHA/pulls
