--- a/.github/workflows/trunk.yaml
+++ b/.github/workflows/trunk.yaml
@@ -178,7 +178,7 @@ jobs:
         run: |
           echo "[INFO] checking commit"
           #curl -L -s -H "Accept: application/vnd.github+json"   -H "Authorization: Bearer ${{ secrets.PGH_TOKEN }}"  -H "X-GitHub-Api-Version: 2022-11-28"   https://api.github.com/repos/debu99/hello-world/commits/$GITHUB_SHA/pulls
-          ref=`curl -L -s -H "Accept: application/vnd.github+json"   -H "Authorization: Bearer ${{ secrets.PGH_TOKEN }}"  -H "X-GitHub-Api-Version: 2022-11-28"   https://api.github.com/repos/debu99/hello-world/commits/$GITHUB_SHA/pulls | jq -re '.[].head.ref'`
+          ref=`curl -L -s -H "Accept: application/vnd.github+json"   -H "Authorization: Bearer ${{ secrets.PGH_TOKEN }}"  -H "X-GitHub-Api-Version: 2022-11-28"   https://api.github.com/repos/debu99/hello-world/commits/$GITHUB_SHA/pulls | jq -re '.[].head.ref'` || true
           ref=`echo "$ref" | tr '[:upper:]' '[:lower:]'`
           echo "[INFO] ref=$ref"
           if [[ -z $ref ]] || [[ $ref == 'null' ]]; then
