--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -150,6 +150,8 @@ jobs:
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+        with:
+          driver: docker # defaults to "docker-containerized"
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -158,7 +160,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          load: true
           push: false
           context: .
           file: ./Dockerfile
