--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -202,6 +202,7 @@ jobs:
     - build
     uses: ./.github/workflows/template_cd.yaml
     with:
+      KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
       NEW_VERSION: ${{ needs.build.outputs.new_tag }}
       APP_DOMAIN_NAME: "https://app.vic510.click"
       APP_PORT: "8000"
@@ -214,6 +215,7 @@ jobs:
     - build
     uses: ./.github/workflows/template_cd.yaml
     with:
+      KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
       NEW_VERSION: ${{ needs.build.outputs.new_tag }}
       APP_DOMAIN_NAME: "https://app.vic510.click"
       APP_PORT: "8000"
@@ -226,7 +228,8 @@ jobs:
     - build
     uses: ./.github/workflows/template_cd.yaml
     with:
-      environment: prod
+      KUBE_CONFIG: ${{ secrets.KUBE_CONFIG }}
+      ENVIRONMENT: prod
       NEW_VERSION: ${{ needs.build.outputs.new_tag }}
       APP_DOMAIN_NAME: "https://app.vic510.click"
       APP_PORT: "8000"
