--- a/.github/workflows/template_cd.yaml
+++ b/.github/workflows/template_cd.yaml
@@ -9,7 +9,7 @@ on:
       APP_NAMESPACE:
         required: true
         type: string
-      APP_DOMAIN_NAME:
+      APP_NAME:
         required: true
         type: string
       APP_PORT:
@@ -48,27 +48,30 @@ jobs:
       - uses: azure/setup-kubectl@v3
         with:
           version: 'v1.25.4'
-      - name: Debug
-        run: |
-          echo "environment=${{ inputs.environment }}"
-          echo "NEW_VERSION=${{ inputs.NEW_VERSION }}"
-          echo "APP_NAMESPACE=${{ inputs.APP_NAMESPACE }} APP_DOMAIN_NAME=${{ inputs.APP_DOMAIN_NAME }} APP_PORT=${{ inputs.APP_PORT }} HEALTHCHECK_URL=${{ inputs.HEALTHCHECK_URL }}"
-          kubectl version
       - name: Setup Helm
         uses: Azure/setup-helm@v3
         with:
           version: 'v3.8.2'
+      - name: Debug
+        run: |
+          echo "ENVIRONMENT=${{ inputs.ENVIRONMENT }}"
+          echo "NEW_VERSION=${{ inputs.NEW_VERSION }}"
+          echo "APP_NAMESPACE=${{ inputs.APP_NAMESPACE }} APP_NAME=${{ inputs.APP_NAME }} APP_PORT=${{ inputs.APP_PORT }} HEALTHCHECK_URL=${{ inputs.HEALTHCHECK_URL }}"
+          kubectl version
+          helm version
       - name: Deploy to production
         id: helm
         run: |
           echo "NEW_VERSION=${{ inputs.NEW_VERSION }}"
-          helm version
-          #helm upgrade --install my-app-prod ./helm-chart -f ./helm-chart/values.prod.yaml
+          helm upgrade --install ${{ inputs.APP_NAME }} ./chart -n ${{ inputs.APP_NAMESPACE }} -f ./charts/values.yaml -f ./charts/values-prod.yaml --set deployment.image.tag=${{ inputs.NEW_VERSION }}
           echo "helm_status=$helm_status" >> $GITHUB_OUTPUT
       - name: Smoke test
         id: test
         run: |
-          echo "prod smoke test"
+          echo "start smoke test..."          
+          chmod +x ./.github/workflows/deploy.sh
+          source ./.github/workflows/deploy.sh
+          healthCheck ${{ inputs.APP_NAME }} ${{ inputs.APP_PORT }} ${{ inputs.HEALTHCHECK_URL }} ${{ inputs.APP_NAMESPACE }}
           echo "test_status=$test_status" >> $GITHUB_OUTPUT
     outputs:
       helm_status: ${{ steps.helm.outputs.helm_status }}
