--- a/.github/workflows/template_cd.yaml
+++ b/.github/workflows/template_cd.yaml
@@ -64,6 +64,7 @@ jobs:
         run: |
           echo "NEW_VERSION=${{ inputs.NEW_VERSION }}"
           helm upgrade --install ${{ inputs.APP_NAME }} ./chart -n ${{ inputs.APP_NAMESPACE }} -f ./chart/values.yaml --set deployment.image.tag=${{ inputs.NEW_VERSION }}
+          sleep 15
           echo "helm_status=$helm_status" >> $GITHUB_OUTPUT
       - name: Smoke test
         id: test
