--- a/.github/workflows/template_cd.yaml
+++ b/.github/workflows/template_cd.yaml
@@ -1,4 +1,4 @@
-name: CD
+name: Template_CD
 
 on:
   workflow_call:
@@ -59,7 +59,7 @@ jobs:
           echo "APP_NAMESPACE=${{ inputs.APP_NAMESPACE }} APP_NAME=${{ inputs.APP_NAME }} APP_PORT=${{ inputs.APP_PORT }} HEALTHCHECK_URL=${{ inputs.HEALTHCHECK_URL }}"
           kubectl version
           helm version
-      - name: Deploy to production
+      - name: Deployment
         id: helm
         run: |
           echo "NEW_VERSION=${{ inputs.NEW_VERSION }}"
