--- a/.github/workflows/k8s-delete.yml
+++ b/.github/workflows/k8s-delete.yml
@@ -1,6 +1,9 @@
 name: K8s PR Sandbox Delete
 
 on:
+  push:
+    branches:
+      - main
   pull_request:
     branches: [develop]
     types: [closed]
